# mpv-spotlight

./: Cargo.toml
src/: lib.rs  monitors.rs  monitors_win.rs
